# MTCNN

./: README.md
MTCNN_train/: ONet_solver.prototxt  ONet_train.prototxt  ONet_train.sh  PNet_solver.prototxt  PNet_train.prototxt  PNet_train.sh  RNet_solver.prototxt  RNet_train.prototxt  RNet_train.sh  test.py  train.txt  train_12.txt  train_24.txt
MTCNN_train/celeba_crop/: celeba_crop.cpp  celeba_crop.h  main.cpp
detection/: CMakeLists.txt  MTCNN.cpp  MTCNN.h  main.cpp
result/: ROC.txt
